// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label matches withError snapshot: with error mount 1`] = `
.glamor-0,
[data-glamor-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-0:after,
[data-glamor-0]:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    max-width: 960px;
  }
}

<Label
  error="example"
>
  <glamorous(label)
    error="example"
  >
    <label
      className="glamor-0"
    >
      example
    </label>
  </glamorous(label)>
</Label>
`;

exports[`Label matches wrapper snapshot: wrapper mount 1`] = `
.glamor-0,
[data-glamor-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-0:after,
[data-glamor-0]:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    max-width: 960px;
  }
}

<Label>
  <glamorous(label)>
    <label
      className="glamor-0"
    >
      example
    </label>
  </glamorous(label)>
</Label>
`;
